Form finally works passing data to webDataReader

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 django = "==2.1"
 tree = "*"
+pandas = "*"
+pandas-datareader = "*"
 
 [requires]
 python_version = "3.6"
